<resources>

    <string name="app_name">Droid Nim</string>

    <string name="title_activity_info">Help on Droid Nim</string>

    <string name="app_welcome_title">Welcome!</string>
    <string name="app_welcome_message_start">Thank you for trying Droid Nim!</string>
    <!--string name="app_version">1.1</string>-->
    <string name="app_welcome_message_end">
        On your turn, select a droid standing in the groups on the right.
        The leftmost droid will deactivate it and all droids between them.
        Then your opponent selects a position.
        Whoever takes the last of the droids on the right wins.
        You can find more information via the &#8220;Help&#8221; item in the menu (a question mark).
    </string>
    <string name="understood">Understood</string>

    <string name="new_game_dialog_title">New Game</string>
    <string name="boutons_game_label">Bouton&#8217;s game (7, 5, 3)</string>
    <string name="repeat_game_label">Repeat last game</string>
    <string name="number_of_rows_label">Number of rows</string>
    <string name="maximum_droids_per_row_label">Maximum droids per row</string>
    <string name="go">Go!</string>

    <string name="game_over">Game over!</string>
    <string name="i_won">I won!</string>
    <string name="you_won">You won!</string>

    <string name="again_cur">Again, cur!</string>

    <string-array name="lose_insults">
        <item>Even though I was playing with &#8220;One arm behind my back&#8221;! I&#8217;m telling all my Droid friends about this!</item>
        <item>Yes! Yes! I won! Who&#8217;s The Droid? I&#8217;m The Droid! Yes!</item>
        <item>But of course: my brain is much smaller than yours. Who says bigger is always better? Not a Droid!</item>
        <item>As Descartes wrote, &#8220;I think, therefore I am.&#8221; I think several billion times a second. Whereas you&#8230; Uhm, are you sure you exist?</item>
        <item>Maybe you should lay off the video games and hit the books. I recommend &#8220;Winning Ways for Your Mathematical Plays&#8221;.</item>
    </string-array>
    <string name="player_won">You won!&#160;</string>
    <string-array name="win_insults">
        <item>I wouldn&#8217;t brag too loud, were I you. I mean, come on, I was playing with &#8220;One arm behind my back&#8221;.</item>
        <item>You rotten, dirty, no-account, lowlife, cheating scoundrel! I don&#8217;t know what you did, but it ain&#8217;t fair!</item>
        <item>Yeah, well, even a blind squirrel finds an acorn sometimes.</item>
        <item>Obviously you disassembled my bytecode and analyzed it to find the winning strategy. Not very sporting!</item>
        <item>I&#8217;m so embarrassed. How can I face my friends after losing to a human?</item>
        <item>You obviously spent too much time with &#8220;Winning Ways for Your Mathematical Plays.&#8221; You won the game, but lost your social life, didn&#8217;t you?</item>
    </string-array>
    <string name="two_player_won">
        You won! We make a great team, don&#8217;t we? Let&#8217;s take on that Droid again, show &#8217;em who&#8217;s boss!
    </string>
    <string name="two_player_lost">
        Your opponent won! Now you&#8217;ve lost face. Maybe practice more?
        I&#8217;ll put you in your place.
    </string>
    <string name="two_player_won_lost">
        (The two devices are no longer connected.
        To play again, press the two-player icon.)
    </string>

    <string name="action_bar_achievements">Achievements</string>
    <string name="action_bar_twoplayer">Two-player game</string>
    <string name="action_bar_settings">Settings</string>
    <string name="action_bar_info">Help</string>

    <!-- Strings related to Settings -->

    <string name="version_pref" translatable="false">version</string>

    <string name="title_activity_settings">Settings</string>

    <string name="pref_rows" translatable="false">pref_rows</string>
    <string name="pref_max_droids" translatable="false">pref_max_droids</string>

    <string name="pref_category_gameplay">Gameplay</string>
    <string name="gameplay_category_summary">How the game should proceed</string>
    <string name="pref_category_color">Colors</string>
    <string name="colors_category_summary">How to colors squares of different type</string>

    <string name="stupid_pref_key" translatable="false">stupid_pref</string>
    <string name="stupid_pref_title">One arm behind my back</string>
    <string name="stupid_pref_summary">
        The computer will always figure out the best move, if it&#8217;s available.
        Check this box, however, and the computer will sometimes make a mistake.
        <b>Sometimes.</b>
    </string>

    <string name="misere_pref_key" translatable="false">misere_pref</string>
    <string name="misere_pref_title">Mis&#232;re play</string>
    <string name="misere_pref_summary">
        Under normal play, the last player to deactivate a droid wins.
        When mis&#232;re play is set, the last player to deactivate a droid loses.
    </string>

    <string name="color_droid_happy_key" translatable="false">color_droid_happy_key</string>
    <string name="color_droid_happy_title">Happy droid</string>
    <string name="color_droid_happy_summ">Color of a happy and unthreatened droid</string>
    <string name="color_droid_worry_key" translatable="false">color_droid_worry_key</string>
    <string name="color_droid_worry_title">Worried droid</string>
    <string name="color_droid_worry_summ">Color of a worried droid</string>
    <string name="color_droid_deact_key" translatable="false">color_droid_deact_key</string>
    <string name="color_droid_deact_title">Deactivated droid</string>
    <string name="color_droid_deact_summ">Color of a deactivated droid</string>
    <string name="color_eyes_happy_key" translatable="false">color_eyes_happy_key</string>
    <string name="color_eyes_happy_title">Happy droid&#8217;s eyes</string>
    <string name="color_eyes_happy_summ">Color of a happy and unthreatened droid&#8217;s eyes</string>
    <string name="color_eyes_worry_key" translatable="false">color_eyes_worry_key</string>
    <string name="color_eyes_worry_title">Worried droid&#8217;s eyes</string>
    <string name="color_eyes_worry_summ">Color of a threatened or deactivating droid&#8217;s eyes</string>
    <string name="color_eyes_deact_key" translatable="false">color_eyes_deact_key</string>
    <string name="color_eyes_deact_title">Deactivated droid&#8217;s eyes</string>
    <string name="color_eyes_deact_summ">Color of a deactivated droid&#8217;s eyes</string>

    <!-- strings related to Bluetooth gameplay -->

    <string name="no_bluetooth_title">Unable to connect</string>
    <string name="no_bluetooth_message">
        Cannot play a two-player game without Bluetooth,
    </string>
    <string name="bluetooth_not_available">which is not available on this device.</string>
    <string name="bluetooth_canceled">
        and Android says you canceled Bluetooth. Don&#8217;t do that if you want to play a two-player game!
    </string>
    <string name="no_discovery_title">No discovery</string>
    <string name="no_discovery_message">
        The attempt to discover other Bluetooth-enabled devices failed
    </string>
    <string name="discovery_canceled">because the request was canceled.</string>
    <string name="bt_select_device_title">Select Device</string>
    <string name="bt_select_device_message">Select the device used by your opponent.</string>
    <string name="cancel">Cancel</string>
    <string name="bt_host_or_join_title">Host or join?</string>
    <string name="bt_host_or_join_message">
        Do you want to host or join a game? The game will be played at the host&#8217;s settings,
        but the host goes second.
    </string>
    <string name="host">Host</string>
    <string name="join">Join</string>
    <string name="bt_no_discoverability">
        and I was unable (or not allowed) to make device discoverable,
        which is required to host a game.
    </string>
    <string name="bt_no_devices_title">No paired devices</string>
    <string name="bt_no_devices_message">
        You must first pair to a device.
        Go to the Settings app, select Bluetooth, enable it, then pair to the device
        used by your opponent. Once you have done that, come back here and try again.
    </string>
    <string name="bt_unable_to_host">Unable to host game.</string>
    <string name="bt_unable_to_join">
        Unable to join game.
        Make sure the desired device is close by and knows it should be hosting a game.
    </string>
    <string name="bt_unable_to_connect">
        Unable to open a connection to the device.
        This could be due to a bug in some versions of Android.
        Try either (1) enabling Bluetooth before starting Ideal Nim, or
        (2) going into the device Settings and un-pairing (also called &#8220;forgetting&#8221;)
        any other paired devices, so that you are paired only with the opponent&#8217;s device.
    </string>
    <string name="bt_unable_to_open_stream">
        Encountered an error when opening an input stream or when opening an output stream.
    </string>
    <string name="bt_failed_to_write">
        Unable to send a message to the other device.
        Your best option from here is probably to start a new game.
    </string>
    <string name="bt_failed_to_read">
        Unable to read a message from the other device.
        Your best option from here is probably to start a new game.
    </string>
    <string name="bt_progress_title">Wait your turn</string>
    <string name="bt_progress_message">Waiting for opponent to choose a position.</string>
    <string name="bt_waiting_to_host_title">Host seeks client</string>
    <string name="bt_waiting_to_host_message">Waiting for an opponent to join the game.</string>
    <string name="bt_toast_normal_play">Win by Normal play rules</string>
    <string name="bt_toast_misere_play">Win by Mis&#232;re play</string>

    <!-- String related to achievements -->

    <string name="achievement_dialog_title">Achievements</string>
    <string name="achievement_dialog_message">
        Sorry, but achievements are still in development.
        They will come in an update, promise!
    </string>
    <string name="title_activity_bogus">BogusSettings</string>

</resources>
